Version 0.0.3
-------------
- mobility()-method now returns a tuple of values (mobility, error), instead of a tuple of numpy arrays (np.array(mobility), np.array(error))

- MOSY-class was fixed to be compatible with newer pandas versions

- Error fixed when fixing a parameter after fitting the first row. Works now as intended

- option figsize added to the plotting functionality of SpecModel.fit()
    - parse_complex option added --> see docstring

- sphinx-frame for documentation added

- changed auto-imports in __init__ when importing eNMRpy

- FileNotFoundError added for missing vdlist

- A more specific error message was included when trying to import 1-dimensional instead of 2-dimensional NMR data.
    - This may occur when a measurement did not finish successfully or was aborted.

Version 0.0.2
-------------

- method .save_eNMRpy() added to save already processed measurements for later imports --> see Load_eNMRpy_data

- class Load_eNMRpy_data(_eNMR_Methods): added in tools to import .eNMRpy files
    - nifty class returning an object which can be used as other Measurement-objects

- tools module moved from Measurement to main module

- base.Measurement.udic and ._uc removed. They were not in use

- code cleanup removing unnecessary wrapper functions which clutter the code
    - eNMRpy.eNMR_Methods.plot_spec_comparison_to_0() removed since its a trivial plotting function
    - eNMRpy.eNMR_Methods.analyzePhasecorretion()-wrapper removed!
        - this should be done individually and is seldomly practical

- autophase() changed to autophase_phase_analysis()

- eNMRpy.Phasefitting.peakpicker() added, which returns a eNMR.Phasefitting.make_model()-compatible array with picked peaks

- eNMRpy.Phasefitting.SpecModel.set_mathematical_constraints()
    - reset function was extended to the vary option solving a previously unintended behavior
    - reset without array (expr=None) fixed
    
- a number of docstrings and comments were added
